--- a/mutiara.html
+++ b/mutiara.html
@@ -174,7 +174,7 @@ footer a{color:#fff;font-weight:bold;text-decoration:none}
     <p>
       Terima kasih sudah scan QR Code.<br><br>
       Semoga Anda senantiasa dalam keadaan
-      <strong>sehat dan bahagia selalu</strong>.<br><br>
+      <strong>Sehat dan Selalu Bahagia</strong>.<br><br>
       <strong>Aamiin 🤲</strong>
     </p>
 
@@ -340,3 +340,4 @@ function closeQrPopup() {
 
 </body>
 </html>
+
